Test another possible fix