@@ -102,8 +102,6 @@
                     <target>21</target>
                     <compilerArgs>
                         <argLine>--enable-preview</argLine>
-                        <argLine>--add-opens=java.base/java.lang=org.apache.tomcat.embed.core</argLine>
-                        <argLine>--add-opens=java.rmi/sun.rmi.transport=org.apache.tomcat.embed.core</argLine>
                     </compilerArgs>
                     <annotationProcessorPaths>
                         <annotationProcessorPath>
@@ -118,6 +116,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
